--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sharik
 description: A new Flutter project.
 
-version: 1.1.0
+version: 1.0.1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -10,12 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^0.17.1
+  flutter_svg: ^0.17.2
   google_fonts: ^0.3.9
-  intro_slider: ^2.2.8
+  intro_slider: ^2.2.9
   file_picker: ^1.4.3+2
-  shared_preferences: ^0.5.6
-  url_launcher: ^5.4.1
+  shared_preferences: ^0.5.6+2
+  url_launcher: ^5.4.2
   wifi_iot: ^0.1.1
 
 dev_dependencies:
@@ -28,3 +28,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - google_fonts/
