--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
-name: sharik
-description: A new Flutter project.
-
+name: Sharik
+description: Sharik is an app for sending files to almost any device. No internet connection needed.
+homepage: https://github.com/marchellodev/sharik
+repository: https://github.com/marchellodev/sharik
+issue_tracker: https://github.com/marchellodev/sharik/issues
+publish_to: none
 version: 1.1.0
 
 environment:
