--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ dependencies:
   google_fonts: ^0.3.9
   intro_slider: ^2.2.9
   file_picker: ^1.4.3+2
-  shared_preferences: ^0.5.6+2
   url_launcher: ^5.4.2
   wifi_iot: ^0.1.1
   clipboard_manager: ^0.0.1
+  path_provider: ^1.6.5
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
