--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^1.6.5
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
+  device_apps: ^1.0.9
 
 dev_dependencies:
   flutter_test:
