--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
 version: 2.0.0
+versionCode: 2
+
+
 authors:
   - marchellodev
 
