--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 2.0.0
-versionCode: 2
+version: 2.1.0
+versionCode: 3
 
 
 authors:
@@ -32,6 +32,7 @@ dependencies:
 
 
 flutter:
+  uses-material-design: true
   assets:
     - assets/
     - google_fonts/
