refactoring: models & providers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,11 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   device_apps: ^1.0.9
+  provider: ^4.0.5
 
+dev_dependencies:
+  hive_generator: ^0.7.0+2
+  build_runner: ^1.8.1
 
 flutter:
   uses-material-design: true
