--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dev_dependencies:
   hive_generator: ^0.7.0+2
   build_runner: ^1.8.1
 
+  pedantic: ^1.9.0
+
 flutter:
   uses-material-design: true
   assets:
