--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ version: 2.1.0
 versionCode: 3
 
 
+
 authors:
   - marchellodev
 
@@ -21,7 +22,7 @@ dependencies:
   flutter_svg: ^0.17.4
   google_fonts: ^0.5.0+1
   intro_slider: ^2.2.9
-  file_picker: ^1.6.3+1
+  file_picker: ^1.6.3+2
   url_launcher: ^5.4.2
   wifi_iot: ^0.1.1
   clipboard_manager: ^0.0.4
@@ -30,6 +31,10 @@ dependencies:
   hive_flutter: ^0.3.0+2
   device_apps: ^1.0.9
   provider: ^4.0.5
+  http: ^0.12.0+4
+  package_info: ^0.4.0+16
+
+
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
@@ -38,7 +43,12 @@ dev_dependencies:
   pedantic: ^1.9.0
 
 flutter:
-  uses-material-design: true
+
   assets:
     - assets/
     - google_fonts/
+
+  fonts:
+    - family: JetBrainsMono
+      fonts:
+        - asset: fonts/JetBrainsMono-Regular.ttf
