--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,19 +20,21 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^0.17.4
-  google_fonts: ^0.5.0+1
+  google_fonts: ^0.6.2
   intro_slider: ^2.2.9
-  file_picker: ^1.6.3+2
-  url_launcher: ^5.4.2
+ 
+  file_picker: 1.4.3+2
+
+  url_launcher: ^5.4.5
   wifi_iot: ^0.1.1
   clipboard_manager: ^0.0.4
-  path_provider: ^1.6.5
+  path_provider: ^1.6.7
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   device_apps: ^1.0.9
   provider: ^4.0.5
   http: ^0.12.0+4
-  package_info: ^0.4.0+16
+  package_info: ^0.4.0+17
 
 
 
