--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^0.17.4
-  google_fonts: ^0.6.2
+  google_fonts: ^1.0.0
   intro_slider: ^2.2.9
 
   # for android (https://github.com/miguelpruivo/flutter_file_picker/issues/223)
@@ -40,11 +40,14 @@ dependencies:
   http: ^0.12.0+4
   package_info: ^0.4.0+17
 
+  ping_discover_network: ^0.2.0+1
+
+
 
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
-  build_runner: ^1.8.1
+  build_runner: ^1.9.0
 
   pedantic: ^1.9.0
 
