--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   intro_slider: ^2.2.9
 
   # for android (https://github.com/miguelpruivo/flutter_file_picker/issues/223)
-  #  file_picker: 1.4.3+2
+  file_picker: 1.4.3+2
 
   # for desktop
-  file_picker: ^1.6.3+2
+#  file_picker: ^1.6.3+2
 
   url_launcher: ^5.4.5
   wifi_iot: ^0.1.1
