--- a/go/hover.yaml
+++ b/go/hover.yaml
@@ -1,6 +1,10 @@
+#application-name: "sharik" # Uncomment to modify this value.
+#executable-name: "sharik" # Uncomment to modify this value. Only lowercase a-z, numbers, underscores and no spaces
+#package-name: "sharik" # Uncomment to modify this value. Only lowercase a-z, numbers and no underscores or spaces
+license: "MIT License" # MANDATORY: Fill in your SPDX license name: https://spdx.org/licenses
 target: lib/main_desktop.dart
-branch: "@latest" # Change to "@latest" to download the latest go-flutter version on every build
+branch: "" # Change to "@latest" to download the latest go-flutter version on every build
 # cache-path: "/home/YOURUSERNAME/.cache/" #  https://github.com/go-flutter-desktop/go-flutter/issues/184
 # opengl: "none" # Uncomment this line if you have trouble with your OpenGL driver (https://github.com/go-flutter-desktop/go-flutter/issues/272)
-docker: false
+docker: true
 engine-version: "" # change to a engine version commit
