--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,26 +15,25 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^0.17.4
-  google_fonts: ^1.0.0
-  intro_slider: ^2.2.9
+  flutter_svg: ^0.18.0
+  google_fonts: ^1.1.0
+  intro_slider: ^2.3.1
 
   # for android (https://github.com/miguelpruivo/flutter_file_picker/issues/223)
-  file_picker: 1.4.3+2
+#  file_picker: 1.4.3+2
 
   # for desktop
-#  file_picker: ^1.7.0
+  file_picker: ^1.12.0
 
-  url_launcher: ^5.4.5
+  url_launcher: ^5.4.11
   wifi_iot: ^0.1.1
-  clipboard_manager: ^0.0.4
-  path_provider: ^1.6.7
+  path_provider: ^1.6.11
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
-  device_apps: ^1.0.9
-  provider: ^4.0.5
-  http: ^0.12.0+4
-  package_info: ^0.4.0+17
+  device_apps: ^1.0.10
+  provider: ^4.1.3
+  http: ^0.12.1
+  package_info: ^0.4.1
 
   ping_discover_network: ^0.2.0+1
 
@@ -42,8 +41,8 @@ dependencies:
 
 
 dev_dependencies:
-  hive_generator: ^0.7.0+2
-  build_runner: ^1.9.0
+  hive_generator: any
+  build_runner: ^1.10.0
 
   pedantic: ^1.9.0
 
@@ -57,3 +56,5 @@ flutter:
     - family: JetBrainsMono
       fonts:
         - asset: fonts/JetBrainsMono-Regular.ttf
+
+  uses-material-design: false
