--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,16 @@ dependencies:
 #  file_picker: 1.4.3+2
 
   # for desktop
-  file_picker: ^1.12.0
+  file_picker: ^1.13.3
 
-  url_launcher: ^5.4.11
+  url_launcher: ^5.5.0
   wifi_iot: ^0.1.1
   path_provider: ^1.6.11
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  device_apps: ^1.0.10
-  provider: ^4.1.3
-  http: ^0.12.1
+  hive: ^1.4.3
+  hive_flutter: ^0.3.1
+  device_apps: ^1.2.0
+  provider: ^4.3.2
+  http: ^0.12.2
   package_info: ^0.4.1
 
   ping_discover_network: ^0.2.0+1
@@ -45,9 +45,9 @@ dependencies:
 
 dev_dependencies:
   hive_generator: any
-  build_runner: ^1.10.0
+  build_runner: ^1.10.2
 
-  pedantic: ^1.9.0
+  pedantic: ^1.9.2
 
 flutter:
 
