--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,14 +1,11 @@
-# Defines a default set of lint rules enforced for
-# projects at Google. For details and rationale,
-# see https://github.com/dart-lang/pedantic#enabled-lints.
-include: package:pedantic/analysis_options.yaml
+include: package:lint/analysis_options.yaml
 
-# For lint rules and documentation, see http://dart-lang.github.io/linter/lints.
-# Uncomment to specify additional rules.
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    omit_local_variable_types: true
+    avoid_classes_with_only_static_members: false
+    prefer_single_quotes: true
+    file_names: false
 
-analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+    # only for debug
+    avoid_print: false
