--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 2.4.0
-versionCode: 5
+version: 2.5.0
+versionCode: 6
 author: marchellodev
 
 environment:
@@ -15,29 +15,37 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  # UI
   flutter_svg: ^0.18.0
   google_fonts: ^1.1.0
   intro_slider: ^2.3.1
+  responsive_framework: ^0.0.8
 
-  # for android (https://github.com/miguelpruivo/flutter_file_picker/issues/223)
-#  file_picker: 1.4.3+2
 
-  # for desktop
-  file_picker: ^1.13.3
-
-  url_launcher: ^5.5.0
+  # UTILS
+  http: ^0.12.2
   wifi_iot: ^0.1.1
+  ping_discover_network: ^0.2.0+1
+
   path_provider: ^1.6.11
+  url_launcher: ^5.5.0
+
+  file_picker: ^1.13.3
+  device_apps: ^1.2.0
+
   hive: ^1.4.3
   hive_flutter: ^0.3.1
-  device_apps: ^1.2.0
-  provider: ^4.3.2+1
-  http: ^0.12.2
+
   package_info: ^0.4.1
 
+  usage: ^3.4.2
 
-  ping_discover_network: ^0.2.0+1
-  responsive_framework: ^0.0.8
+
+  # ARCHITECTURE
+  provider: ^4.3.2+1
+
+
 
   sharik_wrapper:
     git: https://github.com/marchellodev/sharik_wrapper
@@ -46,12 +54,13 @@ dependencies:
 
 
 dev_dependencies:
-  hive_generator: any
+  hive_generator: ^0.7.1
   build_runner: ^1.10.2
 
-  pedantic: ^1.9.2
+  lint: ^1.3.0-dev.d29.1
 
 flutter:
+  uses-material-design: false
 
   assets:
     - assets/
@@ -62,4 +71,3 @@ flutter:
       fonts:
         - asset: fonts/JetBrainsMono-Regular.ttf
 
-  uses-material-design: false
