--- a/media/store.yaml
+++ b/media/store.yaml
@@ -61,3 +61,35 @@ pl:
 
                      Aplikacja nie zawiera reklam i jest całkowicie open-source.
                      Sharik jest także dostępny na platformy: Windows, MacOS oraz Linux."
+
+
+in-gu:
+  Name: "Sharik - WI-FI દ્વારા ફાઇલ શેરિંગ"
+  Short description: "કોઈપણ ઉપકરણ સાથે ફાઇલોને Wi-Fi અથવા ટેથરીંગ દ્વારા શેર કરો"
+  Full description: "આ એપ્લિકેશન તમને લગભગ કોઈપણ ઉપકરણ પર ફાઇલો મોકલવામાં સહાય કરી શકે છે.
+                      તમારે ફક્ત એક બ્રાઉઝર અને Wi-Fi કનેક્શન અથવા ટેથરીંગ (મોબાઇલ હોટસ્પોટ) ની જરૂર છે.
+
+                      તમે ફાઇલો, ટેક્સ્ટ અથવા એક Android એપ્લિકેશન પણ શેર કરી શકો છો. તે વાપરવા માટે સરળ અને ઝડપી છે.
+                      તમારે બીજા છેડે પણ તે જ એપ્લિકેશનની જરૂર નથી - બ્રાઉઝર અથવા કોઈપણ ડાઉનલોડિંગ ટૂલનો ઉપયોગ કરો (દા.ત. જી. Wget).
+                      વહેંચાયેલ સામગ્રીને સીધા શારિકમાં ખોલવા માટે રીસીવર કહેવાતા અમારા નવા ટૂલનો ઉપયોગ કરો.
+
+                      આ એપ્લિકેશનમાં જાહેરાતો શામેલ નથી અને તે ખુલ્લી-સોર્સીસવાળી છે.
+                      Sharik વિન્ડોઝ, મOSકોઝ અને લિનક્સ માટે પણ ઉપલબ્ધ છે
+
+                     GitHub page: github.com/marchellodev/sharik"
+
+
+in-hi:
+  Name: "Sharik - WI-FI के माध्यम से फ़ाइल साझाकरण"
+  Short description: "वाई-फाई या टेथरिंग के माध्यम से किसी भी डिवाइस के साथ फ़ाइलें साझा करें"
+ Full description: "यह ऐप आपको लगभग किसी भी डिवाइस पर फाइल भेजने में मदद कर सकता है।
+                      आप सभी की जरूरत है एक ब्राउज़र और एक वाई-फाई कनेक्शन या टेथरिंग (मोबाइल हॉटस्पॉट) है
+
+                      आप फ़ाइलें, पाठ या यहां तक कि एक Android एप्लिकेशन साझा कर सकते हैं। यह प्रयोग करने में आसान और तेज़ है।
+                      आपको दूसरे छोर पर एक ही ऐप की आवश्यकता नहीं है - ब्राउज़र या किसी भी डाउनलोडिंग टूल (ई-जी। Wget) का उपयोग करें।
+                      साझा सामग्री को सीधे साझा करने के लिए हमारे नवीनतम टूल का उपयोग करें, जिसे साझा किया गया है।
+
+                      इस ऐप में विज्ञापन नहीं हैं और यह पूरी तरह से खुला हुआ है।
+                      Sharik विंडोज, मैकओएस और लिनक्स के लिए भी उपलब्ध है
+
+                     GitHub page: github.com/marchellodev/sharik"
