sharik is now available on snap!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sharik
-description: Sharik is an app for sending files to almost any device. No internet connection needed.
+description: Sharik is an open-source, cross-platform solution for sharing files via Wi-Fi or Mobile Hotspot
 homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
