--- a/go/hover.yaml
+++ b/go/hover.yaml
@@ -1,6 +1,6 @@
 application-name: "sharik" # Uncomment to modify this value.
 executable-name: "sharik" # Uncomment to modify this value. Only lowercase a-z, numbers, underscores and no spaces
-package-name: "sharik" # Uncomment to modify this value. Only lowercase a-z, numbers and no underscores or spaces
+package-name: "sharik-app" # Uncomment to modify this value. Only lowercase a-z, numbers and no underscores or spaces
 license: "MIT License" # MANDATORY: Fill in your SPDX license name: https://spdx.org/licenses
 target: lib/main_desktop.dart
 # opengl: "none" # Uncomment this line if you have trouble with your OpenGL driver (https://github.com/go-flutter-desktop/go-flutter/issues/272)
