store.yaml formatting

--- a/media/store.yaml
+++ b/media/store.yaml
@@ -141,6 +141,7 @@ uk:
 
 
 
+
 # needs review
 pl:
   Name: "Sharik - przesyłanie plików przez Wi-Fi"
@@ -188,20 +189,24 @@ pl:
     Pobierz Sharik teraz!
 
 
+
+
 in-gu:
   Name: "Sharik - WI-FI દ્વારા ફાઇલ શેરિંગ"
   Short description: "કોઈપણ ઉપકરણ સાથે ફાઇલોને Wi-Fi અથવા ટેથરીંગ દ્વારા શેર કરો"
-  Full description: "આ એપ્લિકેશન તમને લગભગ કોઈપણ ઉપકરણ પર ફાઇલો મોકલવામાં સહાય કરી શકે છે.
-                      તમારે ફક્ત એક બ્રાઉઝર અને Wi-Fi કનેક્શન અથવા ટેથરીંગ (મોબાઇલ હોટસ્પોટ) ની જરૂર છે.
+આ એપ્લિકેશન તમને લગભગ કોઈપણ ઉપકરણ પર ફાઇલો મોકલવામાં સહાય કરી શકે છે.
+તમારે ફક્ત એક બ્રાઉઝર અને Wi-Fi કનેક્શન અથવા ટેથરીંગ (મોબાઇલ હોટસ્પોટ) ની જરૂર છે.
 
-                      તમે ફાઇલો, ટેક્સ્ટ અથવા એક Android એપ્લિકેશન પણ શેર કરી શકો છો. તે વાપરવા માટે સરળ અને ઝડપી છે.
-                      તમારે બીજા છેડે પણ તે જ એપ્લિકેશનની જરૂર નથી - બ્રાઉઝર અથવા કોઈપણ ડાઉનલોડિંગ ટૂલનો ઉપયોગ કરો (દા.ત. જી. Wget).
-                      વહેંચાયેલ સામગ્રીને સીધા શારિકમાં ખોલવા માટે રીસીવર કહેવાતા અમારા નવા ટૂલનો ઉપયોગ કરો.
+તમે ફાઇલો, ટેક્સ્ટ અથવા એક Android એપ્લિકેશન પણ શેર કરી શકો છો. તે વાપરવા માટે સરળ અને ઝડપી છે.
+તમારે બીજા છેડે પણ તે જ એપ્લિકેશનની જરૂર નથી - બ્રાઉઝર અથવા કોઈપણ ડાઉનલોડિંગ ટૂલનો ઉપયોગ કરો (દા.ત. જી. Wget).
+વહેંચાયેલ સામગ્રીને સીધા શારિકમાં ખોલવા માટે રીસીવર કહેવાતા અમારા નવા ટૂલનો ઉપયોગ કરો.
 
-                      આ એપ્લિકેશનમાં જાહેરાતો શામેલ નથી અને તે ખુલ્લી-સોર્સીસવાળી છે.
-                      Sharik વિન્ડોઝ, મOSકોઝ અને લિનક્સ માટે પણ ઉપલબ્ધ છે
+આ એપ્લિકેશનમાં જાહેરાતો શામેલ નથી અને તે ખુલ્લી-સોર્સીસવાળી છે.
+Sharik વિન્ડોઝ, મOSકોઝ અને લિનક્સ માટે પણ ઉપલબ્ધ છે
 
-                     GitHub page: github.com/marchellodev/sharik"
+GitHub page: github.com/marchellodev/sharik"
+
+
 
 
 in-hi:
